# bevy_jam_one

./: Cargo.toml  LICENSE  README.MD  bevy_game.js  build.rs
.github/workflows/: release.yaml
assets/sprites/: body_parts.aseprite  monster.aseprite  monster.backup.aseprite  overlays.aseprite  person_player.aseprite  slime_ball.aseprite  target.aseprite
src/: body_part.rs  game.rs  main.rs  monster.rs  mouse_cursor.rs  player.rs  player_damaged.rs  ready_to_jump.rs  score.rs  slime_ball.rs  target_status.rs  util.rs
workflows/: ci.yaml
