[package]
name = "bevy_jam_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
bevy_ase = { git = "https://github.com/B-Reif/bevy_ase", features = ["benimator"] }
benimator = "2.1"
bevy_rapier2d = "0.12.1"
bevy-inspector-egui = "0.8.2"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3